--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
 <h3>I like using <a href="http://code.google.com/p/google-motion-charts-with-r/">googleVis</a> in R to quickly create nice interactive <a href="https://developers.google.com/chart/interactive/docs/gallery/geomap">Google Geomaps</a>.</h3>
 
+<p>TEST</p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
